# lazymin

./: .dockerignore  .gitignore  Cargo.toml  compose.yaml  package-lock.json  package.json  wrangler.jsonc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-pages.yml
crates/lazymin-core/: Cargo.toml
crates/lazymin-core/src/: app.rs  format.rs  input.rs  lib.rs  web_shell_flags.rs
crates/lazymin-core/src/audio/: background-loop.opus  ding.opus  mod.rs
crates/lazymin-core/src/game/: competitors.rs  dev_presets.rs  hints.rs  log.rs  mod.rs  producers.rs  research.rs  resources.rs  save.rs  state.rs  tick.rs  upgrades.rs
crates/lazymin-core/src/game/save/: native.rs  wasm.rs
crates/lazymin-core/src/terminal/: CommandDefs.rs  CommandModifiers.rs  commands.rs  execute.rs  highlight.rs  locks.rs  max_purchase.rs  mod.rs  modifiers.md  permission_lock.rs  suggest.rs
crates/lazymin-core/src/ui/: layout.rs  mod.rs
crates/lazymin-native/: Cargo.toml
crates/lazymin-native/src/: main.rs
crates/lazymin-web/: Cargo.toml  README.md  Trunk.toml  index.html  manifest.webmanifest  sw.js
crates/lazymin-web/src/: ansi_backend.rs  lib.rs  xterm_input.rs
docker/: Dockerfile.ci
docs/: cloudflare-pages.md  lazymin-gdd-v01.md  lazymin-gdd-v02.md  market_feature_rollout_6f04de6f.plan.md
scripts/: build-web.sh  render-pwa-icons.sh  run-native.sh
