[package]
name = "lazymin-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev-presets = []

[dependencies]
once_cell = "1.19"
ratatui = { version = "0.30", default-features = false, features = ["unstable-rendered-line-info"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
