[package]
name = "lazymin-core"
edition = "2021"
version = "0.0.1"

[dependencies]
once_cell = "1.19"
serde_json = "1"

[dependencies.ratatui]
version = "0.30"
features = ["unstable-rendered-line-info"]
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.92"
features = ["Storage", "Window"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]

[target.'cfg(target_arch = "wasm32")'.build-dependencies]

[features]
default = []
dev-presets = []

[lib]
path = "src/lib.rs"
name = "lazymin_core"
edition = "2021"
required-features = []
crate-type = ["lib"]
