[package]
name = "lazymin-native"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev-presets = ["lazymin-core/dev-presets"]

[dependencies]
lazymin-core = { path = "../lazymin-core" }
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.28"
rodio = { version = "0.22.2", features = ["playback"] }
symphonia = { version = "0.5.5", default-features = false, features = ["ogg"] }
symphonia-adapter-libopus = "0.2.7"
