[package]
name = "lazymin-native"
edition = "2021"
version = "0.0.1"

[dependencies]
crossterm = "0.28"
symphonia-adapter-libopus = "0.2.7"

[dependencies.lazymin-core]
path = "../lazymin-core"

[dependencies.ratatui]
version = "0.30"
features = ["crossterm"]

[dependencies.rodio]
version = "0.22.2"
features = ["playback"]

[dependencies.symphonia]
version = "0.5.5"
features = ["ogg"]
default-features = false

[features]
default = []
dev-presets = ["lazymin-core/dev-presets"]

[[bin]]
path = "src/main.rs"
name = "lazymin-native"
required-features = []
