[package]
name = "lazymin-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anes = "0.2"
getrandom = { version = "0.2", features = ["js"] }
lazymin-core = { path = "../lazymin-core" }
ratatui = { version = "0.30", default-features = false, features = ["unstable-rendered-line-info"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Performance",
] }
