[package]
name = "lazymin-web"
edition = "2021"
version = "0.0.1"

[dependencies]
anes = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.lazymin-core]
path = "../lazymin-core"

[dependencies.ratatui]
version = "0.30"
features = ["unstable-rendered-line-info"]
default-features = false

[dependencies.web-sys]
version = "0.3.94"
features = ["console", "AudioBuffer", "AudioContext", "AudioBufferSourceNode", "AudioDestinationNode", "BaseAudioContext", "Blob", "BlobPropertyBag", "Document", "DomException", "HtmlAudioElement", "Url", "Window", "Performance"]

[lib]
path = "src/lib.rs"
name = "lazymin_web"
required-features = []
crate-type = ["cdylib"]
